--- a/app/views/caa/cases/showhideunassignedcases.html
+++ b/app/views/caa/cases/showhideunassignedcases.html
@@ -15,7 +15,7 @@ Divorce
 
                         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l ">
                             <h1 class="govuk-fieldset__heading">
-                                Filter unassigned cases by case type
+                                Filter by case type
                             </h1>
                         </legend>
 
@@ -166,19 +166,22 @@ Divorce
                         </fieldset>
                     </div>
 
+        <div class="govuk-form-group govuk-!-padding-top-4">
+            <button class="govuk-button" data-module="govuk-button">
+                Update list
+            </button>
+        </div>
 
+        <!--
             <form
                     name="unassignedcases"
+                    target="unassignedcases"
                     method="post"
                     id="aspnetForm"
                     autocomplete="off">
-                    <div class="govuk-form-group govuk-!-padding-top-4">
-                        <button class="govuk-button" data-module="govuk-button">
-                            Update list
-                        </button>
-                    </div>
-            </form>
 
+            </form>
+        -->
     </div>
 
 </div>
