--- a/app/views/caa/cases/unassignedcases.html
+++ b/app/views/caa/cases/unassignedcases.html
@@ -47,8 +47,9 @@ Divorce
                                         </div>-->
                                     </th>
                                     <th class="govuk-table__header" scope="col" style="width:200px;">Solicitor's notes &#x2195;</th>
-                                    <th class="govuk-table__header" scope="col" style="width:200px;">Case type &#x2195;</th>
-                                    <th class="govuk-table__header" scope="col" style="width:200px;">Solicitor's firm &#x2195;</th>
+                                    <th class="govuk-table__header" scope="col" style="width:160px;">Case type &#x2195;</th>
+                                    <th class="govuk-table__header" scope="col" style="width:100px;">Solicitor &#x2195;</th>
+                                    <th class="govuk-table__header" scope="col" style="width:140px;">Solicitor's firm &#x2195;</th>
                                     <th class="govuk-table__header" scope="col">Case name &#x2195;</th>
                                     <th class="govuk-table__header" scope="col" style="width:110px;">Date sent &#x25BC;</th>
                                     <th class="govuk-table__header" scope="col" style="width:110px;">Deadline &#x2195;</th>
@@ -65,6 +66,7 @@ Divorce
                                     </th>
                                     <td class="govuk-table__cell ">Michele Serrano EB-345-2020</td>
                                     <td class="govuk-table__cell ">Divorce</td>
+                                    <td class="govuk-table__cell ">Becky Ling</td>
                                     <td class="govuk-table__cell ">Clarke Willmott</td>
                                     <td class="govuk-table__cell ">Anne Smith vs Hugh fearnley Smith</td>
                                     <td class="govuk-table__cell ">27 Oct 20<br>(3 days ago)</td>
@@ -80,6 +82,7 @@ Divorce
                                     </th>
                                     <td class="govuk-table__cell ">Michele Serrano<br>FR-347-2020</td>
                                     <td class="govuk-table__cell ">Contested Financial Remedy</td>
+                                    <td class="govuk-table__cell ">Becky Ling</td>
                                     <td class="govuk-table__cell ">Clarke Willmott</td>
                                     <td class="govuk-table__cell ">Anne Smith vs Hugh fearnley Smith</td>
                                     <td class="govuk-table__cell ">27 Oct 20<br>(3 days ago)</td>
@@ -95,6 +98,7 @@ Divorce
                                     </th>
                                     <td class="govuk-table__cell ">Pietro Jones</td>
                                     <td class="govuk-table__cell ">Contested Financial Remedy</td>
+                                    <td class="govuk-table__cell ">Jane Tompkinson</td>
                                     <td class="govuk-table__cell ">Michelmores</td>
                                     <td class="govuk-table__cell ">Hemesh Patel vs Laura Patel</td>
                                     <td class="govuk-table__cell ">29 Oct 20<br>(1 day ago)</td>
