--- a/app/views/noticeofchange/solicitor/securityquestionfull.html
+++ b/app/views/noticeofchange/solicitor/securityquestionfull.html
@@ -57,7 +57,7 @@ Case details
         </div>
       </div>
 
-      <p>You must enter the details exactly as they’re written on the case, including any mistakes.</p>
+      <p>You must enter the client details exactly as they’re written on the case, including any mistakes.</p>
 
       {% if data.errornomatch == 'true'  %}
       <span id="" class="govuk-error-message">
