--- a/app/views/noticeofchange/solicitor/securityquestionprobate.html
+++ b/app/views/noticeofchange/solicitor/securityquestionprobate.html
@@ -61,11 +61,11 @@ Case details
                       </div>
                 </div>
 
-                <p>You must enter the details exactly as they’re written on the case, including any mistakes.</p>
+                <p>You must enter the client details exactly as they’re written on the case, including any mistakes.</p>
 
                 {% if data.errornomatch == 'true'  %}
                     <span id="" class="govuk-error-message">
-                        <span class="govuk-visually-hidden">Error:</span> The details must exactly match the case, including any mistakes
+                        <span class="govuk-visually-hidden">Error:</span> The client details must exactly match as they’re written on the case, including any mistakes
                     </span>
                 {% endif %}
 
