--- a/app/views/noticeofchange/solicitor/stopsot.html
+++ b/app/views/noticeofchange/solicitor/stopsot.html
@@ -42,13 +42,13 @@ Case details
                     Statement of truth
                 </h2>
             </legend>-->
-            <p>When you’re satisfied that all the information is accurate, you should tick to “sign”.</p>
+            <p>When you're satisfied that all the information matches what is written on the case, you should tick to “sign”.</p>
 
             <div class="govuk-checkboxes">
                 <div class="govuk-checkboxes__item">
                     <input class="govuk-checkboxes__input" id="sot" name="sot" type="checkbox">
                     <label class="govuk-label govuk-checkboxes__label" for="sot">
-                        <p>I confirm all these details are accurate.</p>
+                        <p>I confirm all these details are accurate and match what is written on the case.</p>
                     </label>
                 </div>
             </div>
