--- a/app/views/noticeofchange/solicitor/checkanswers.html
+++ b/app/views/noticeofchange/solicitor/checkanswers.html
@@ -162,17 +162,17 @@ Case details
                                     Statement of truth
                                 </h2>
                             </legend>-->
-                            <p>When you’re satisfied that all the information is accurate, you should tick to “sign”.</p>
+                            <p>When you’re satisfied that all the information is as written on the case, you should tick to “sign”.</p>
                             {% if data.errorsot == 'true'%}
                                 <span id="national-insurance-number-error" class="govuk-error-message">
-                                      <span class="govuk-visually-hidden">Error:</span> Tick the box to confirm the details are accurate
+                                      <span class="govuk-visually-hidden">Error:</span> Tick the box to confirm all these details are as written on the case are accurate
                                 </span>
                             {% endif %}
                             <div class="govuk-checkboxes">
                                 <div class="govuk-checkboxes__item">
                                     <input class="govuk-checkboxes__input" id="sot" name="sot" type="checkbox">
                                     <label class="govuk-label govuk-checkboxes__label" for="sot">
-                                        <p>I confirm all these details are accurate.</p>
+                                        <p>I confirm all these details are as written on the case are accurate.</p>
                                     </label>
                                 </div>
                             </div>
