NoC text updates

--- a/app/views/noticeofchange/solicitor/confirmation.html
+++ b/app/views/noticeofchange/solicitor/confirmation.html
@@ -62,13 +62,13 @@ Case details
 
                     {% if data.autoapproved == 'true' %}
                         <!-- Automatic approval -->
-                        <p class="govuk-body govuk-!-margin-top-6">If the client had legal representation, we've sent an to email their solicitor.</p>
+                        <p class="govuk-body govuk-!-margin-top-6">If the client had legal representation, we've sent an email to their solicitor.</p>
 
                         <h2 class="govuk-heading-m ">What happens next</h2>
 
                         {% if data.adminonly == 'true' %}
                             <p class="govuk-body">
-                                You'll must to share the case with someone.
+                                You must share the case with someone.
                             </p>
                             <p class="govuk-body"><a href="#">Share this case</a></p>
                         {% else %}
