--- a/app/views/noticeofchange/v1/solicitor/caselist.html
+++ b/app/views/noticeofchange/v1/solicitor/caselist.html
@@ -9,7 +9,7 @@ Case details
 
     <div class="hmcts-page-heading">
           <div class="hmcts-page-heading__title">
-               <h1 class="govuk-heading-xl">Case Lists</h1>
+               <h1 class="govuk-heading-xl">Case list</h1>
           </div>
     </div>
 
