--- a/app/views/noticeofchange/solicitor/checkanswers.html
+++ b/app/views/noticeofchange/solicitor/checkanswers.html
@@ -162,7 +162,7 @@ Case details
                                     Statement of truth
                                 </h2>
                             </legend>-->
-                            <p>When you’re satisfied that all the information is as written on the case, you should tick to “sign”.</p>
+                            <p>When you're satisfied that all the information matches what is written on the case, you should tick to “sign”.</p>
                             {% if data.errorsot == 'true'%}
                                 <span id="national-insurance-number-error" class="govuk-error-message">
                                       <span class="govuk-visually-hidden">Error:</span> Tick the box to confirm all these details are accurate and match what is written on the case
