progress on FR pages for user testing,  live journey is not final though

--- a/app/views/searchorgs/search/fr.html
+++ b/app/views/searchorgs/search/fr.html
@@ -1,4 +1,4 @@
-{% extends "../layoutdemo.html" %}
+{% extends "../layoutdemomyhmcts.html" %}
 
 {% block pageTitle %}
 Divorce
@@ -7,8 +7,8 @@ Divorce
 
 {% block content %}
 
-<div style="width:960px; display: flex; margin: 0 auto;">
-    <div class="govuk-grid-row govuk-grid-column-two-thirds">
+<div style="width:570px; display: flex; margin: 0 auto; margin-right: 650px;">
+    <div class="">
 
         <div class="govuk-form-group">
 
@@ -23,10 +23,17 @@ Divorce
 
 
             <div class="govuk-form-group">
-                <label class="govuk-label" for="address-county">
+                <label class="govuk-label" for="address-county" style="font-size:18px;">
                     Solicitor’s name
                 </label>
-                <input class="govuk-input " id="address-county" name="address-county" type="text">
+                <input class="govuk-input " id="address-county" name="address-county" type="text" style="border: solid 1px; height:32px; font-size:18px;">
+            </div>
+
+            <div class="govuk-form-group">
+                <label class="govuk-label" for="address-county" style="font-size:18px;">
+                    Name of your firm
+                </label>
+                <input class="govuk-input " id="address-county" name="address-county" type="text" style="border: solid 1px; height:32px; font-size:18px;">
             </div>
 
 
