fr updates to mtch journey for testing

--- a/app/views/searchorgs/search/createcase.html
+++ b/app/views/searchorgs/search/createcase.html
@@ -70,7 +70,7 @@ Divorce
 
 
         <form
-                action="/pbaandcardpayment/solicitor/fr1"
+                action="/searchorgs/search/fr1"
                 name="aspnetForm"
                 method="post"
                 id="aspnetForm"
