--- a/app/views/searchorgs/search/fr1.html
+++ b/app/views/searchorgs/search/fr1.html
@@ -51,7 +51,7 @@ Divorce
             <div class="govuk-form-group">
                 <div  class="form-group form-group-related">
                     <form
-                            action="######"
+                            action="/searchorgs/search/fr2"
                             name="aspnetForm"
                             method="post"
                             id="aspnetForm"
