--- a/app/views/searchorgs/search/fr2.html
+++ b/app/views/searchorgs/search/fr2.html
@@ -7,12 +7,12 @@ Divorce
 
 {% block content %}
 
-<div style="width:570px; display: flex; margin: 0 auto; margin-right: 650px;">
-    <div class="">
+<div style="width:610px; display: flex; margin: 0 auto; margin-right: 610px;">
+    <div style="width:620px;">
 
         <div class="govuk-form-group">
 
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l  govuk-!-margin-top-5">
                 <h1 class="govuk-fieldset__heading">
                     Consent Order Application
                 </h1>
@@ -23,22 +23,146 @@ Divorce
 
 
             <div class="govuk-form-group">
-                <label class="govuk-label" for="address-county" style="font-size:18px;">
+                <label class="govuk-label" for="solicitorsname" style="font-size:18px;">
                     Solicitor’s name
                 </label>
-                <input class="govuk-input " id="address-county" name="address-county" type="text" style="border: solid 1px; height:32px; font-size:18px;">
+                <input class="govuk-input " id="solicitorsname" name="solicitorsname" type="text" style="border: solid 1px; height:32px; font-size:18px;">
             </div>
 
             <div class="govuk-form-group">
-                <label class="govuk-label" for="address-county" style="font-size:18px;">
+                <label class="govuk-label" for="firmname" style="font-size:18px;">
                     Name of your firm
                 </label>
-                <input class="govuk-input " id="address-county" name="address-county" type="text" style="border: solid 1px; height:32px; font-size:18px;">
+                <input class="govuk-input " id="firmname" name="firmname" type="text" style="border: solid 1px; height:32px; font-size:18px;">
+            </div>
+
+            <div class="govuk-form-group">
+                <label class="govuk-label" for="yourref" style="font-size:18px;">
+                    Your reference (Optional)
+                </label>
+                <input class="govuk-input " id="yourref" name="yourref" type="text" style="border: solid 1px; height:32px; font-size:18px;">
+            </div>
+
+            <h3 class="govuk-heading-m govuk-!-margin-top-7 govuk-!-margin-bottom-4">Your address</h3>
+
+            <div class="govuk-form-group" style="margin:0;">
+                <label class="govuk-label" for="solicitorsname" style="font-size:18px;">
+                    Enter a UK postcode
+                </label>
+                <div  class="form-group form-group-related">
+                    <input class="govuk-input " id="postcodesearch" name="postcodesearch" type="text" style="border: solid 1px; height:32px; font-size:18px; width:250px;">
+                    <button  class="govuk-button" type="submit" style=" font-size: 1.05rem; height:30px; " onclick="showaddressfields()">Find address</button>
+                </div>
             </div>
 
 
+            <div id="hiddenaddress" class="govuk-form-group" style="display:none">
 
-            <h3 class="govuk-heading-m govuk-!-margin-top-7 govuk-!-margin-bottom-4">Applicant solicitor organisation</h3>
+                <div class="govuk-form-group">
+                    <label class="govuk-label" for="building" style="font-size:18px;">
+                        Building and Street
+                    </label>
+                    <input class="govuk-input " id="building" name="building" type="text" style="border: solid 1px; height:32px; font-size:18px;">
+                </div>
+
+                <div class="govuk-form-group">
+                    <label class="govuk-label" for="address2" style="font-size:18px;">
+                        Address Line 2
+                    </label>
+                    <input class="govuk-input " id="address2" name="address2" type="text" style="border: solid 1px; height:32px; font-size:18px;">
+                </div>
+
+                <div class="govuk-form-group">
+                    <label class="govuk-label" for="address3" style="font-size:18px;">
+                        Address Line 3
+                    </label>
+                    <input class="govuk-input " id="address3" name="address3" type="text" style="border: solid 1px; height:32px; font-size:18px;">
+                </div>
+
+                <div class="govuk-form-group">
+                    <label class="govuk-label" for="town" style="font-size:18px;">
+                        Town or City
+                    </label>
+                    <input class="govuk-input " id="town" name="town" type="text" style="border: solid 1px; height:32px; font-size:18px;">
+                </div>
+
+                <div class="govuk-form-group">
+                    <label class="govuk-label" for="county" style="font-size:18px;">
+                        County
+                    </label>
+                    <input class="govuk-input " id="county" name="county" type="text" style="border: solid 1px; height:32px; font-size:18px;">
+                </div>
+
+                <div class="govuk-form-group">
+                    <label class="govuk-label" for="postcode" style="font-size:18px;">
+                        Postcode/Zipcode
+                    </label>
+                    <input class="govuk-input " id="postcode" name="postcode" type="text" style="border: solid 1px; height:32px; font-size:18px;">
+                </div>
+
+                <div class="govuk-form-group">
+                    <label class="govuk-label" for="country" style="font-size:18px;">
+                        Country
+                    </label>
+                    <input class="govuk-input " id="country" name="country" type="text" style="border: solid 1px; height:32px; font-size:18px;">
+                </div>
+
+            </div>
+
+
+            <div class="govuk-form-group">
+                <label class="govuk-label" for="phone" style="font-size:18px;">
+                    Phone Number (Optional)
+                </label>
+                <input class="govuk-input " id="phone" name="phone" type="text" style="border: solid 1px; height:32px; font-size:18px;">
+            </div>
+
+            <div class="govuk-form-group">
+                <label class="govuk-label" for="email" style="font-size:18px;">
+                    Email
+                </label>
+                <input class="govuk-input " id="email" name="email" type="text" style="border: solid 1px; height:32px; font-size:18px;">
+            </div>
+
+            <div class="govuk-form-group">
+                <label class="govuk-label" for="dx" style="font-size:18px;">
+                    DX number (Optional)
+                </label>
+                <input class="govuk-input " id="dx" name="dx" type="text" style="border: solid 1px; height:32px; font-size:18px;">
+            </div>
+
+            <div class="govuk-form-group  govuk-!-margin-bottom-8">
+                <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
+                    <legend class="govuk-fieldset__legend ">
+                        <p class="govuk-fieldset__heading">
+                            Future email communications
+                        </p>
+                    </legend>
+                    <div id="changed-name-hint" class="govuk-hint" style=" font-size:16px;">
+                        I confirm I am willing to accept service of all correspondence and orders by email at the email address stated above.
+                    </div>
+                    <div class="govuk-radios govuk-radios--inline">
+                        <div class="govuk-radios__item">
+                            <input class="govuk-radios__input" id="changed-name" name="changed-name" type="radio" value="yes">
+                            <label class="govuk-label govuk-radios__label" for="changed-name" style=" font-size:18px;">
+                                Yes
+                            </label>
+                        </div>
+                        <div class="govuk-radios__item">
+                            <input class="govuk-radios__input" id="changed-name-2" name="changed-name" type="radio" value="no">
+                            <label class="govuk-label govuk-radios__label" for="changed-name-2" style=" font-size:18px;">
+                                No
+                            </label>
+                        </div>
+                    </div>
+
+                </fieldset>
+            </div>
+
+
+            <hr>
+
+            <h3 class="govuk-heading-m govuk-!-margin-top-7 govuk-!-margin-bottom-4">Applicant Organisation Policy</h3>
 
 
             <h3 class="govuk-heading-m govuk-!-margin-top-7 govuk-!-margin-bottom-4">Search for an organisation</h3>
@@ -54,17 +178,18 @@ Divorce
                     <!-- Enter the firm's name, address or postcode </span>-->
                 </label>
                 <input class="govuk-input  "
-                       id="searchinput" name="searchinput" type="text" spellcheck="false" value="">
+                       id="searchinput" name="searchinput" type="text" spellcheck="false" value=""  style="border: solid 1px; height:32px; font-size:18px;">
             </div>
 
 
-
+            <h3 class="govuk-heading-m govuk-!-margin-top-7 govuk-!-margin-bottom-4">Organisation name and address</h3>
+            <hr>
                         <div id="resultstest" style="width:650px;">
 
                             <div id="noresults" style="display: none;">
-                                <p><span class="govuk-!-font-weight-bold">No results found</span>
-                                    <br>The solicitor's firm may not be registered with our online service.</p>
-                                <p>You can search again by entering different details or continue without selecting a firm.  This won't have an impact on your application.</p>
+                                <p class="govuk-!-margin-top-3"><span >No results found</span></p>
+                                    <!--<br>The solicitor's firm may not be registered with our online service.-->
+                                <!--<p>You can search again by entering different details or continue without selecting a firm.  This won't have an impact on your application.</p>-->
                             </div>
 
 
@@ -473,7 +598,7 @@ Divorce
 
 
 
-            <details class="govuk-details" data-module="govuk-details">
+            <details class="govuk-details govuk-!-margin-top-6" data-module="govuk-details" >
                 <summary class="govuk-details__summary">
                     <span class="govuk-details__summary-text">
                       Can’t find the organisation you are looking for?
@@ -492,7 +617,7 @@ Divorce
                 <label class="govuk-label" for="address-county">
                     Reference (Optional)
                 </label>
-                <input class="govuk-input " id="ownrefernce" name="ownrefernce" type="text">
+                <input class="govuk-input " id="ownrefernce" name="ownrefernce" type="text" style="border: solid 1px; height:32px; font-size:18px;">
             </div>
 
 
@@ -502,15 +627,24 @@ Divorce
         </div>
 
 
-        <form
-                name="aspnetForm"
-                method="post"
-                id="aspnetForm"
-                autocomplete="off">
-            <button class="govuk-button" data-module="govuk-button">
-                Continue
-            </button>
-        </form>
+        <div class="govuk-form-group">
+            <div  class="form-group form-group-related">
+                <form
+                        action="/searchorgs/search/fr3"
+                        name="aspnetForm"
+                        method="post"
+                        id="aspnetForm"
+                        autocomplete="off">
+
+                    <button  class="govuk-button govuk-button--secondary" type="button" disabled="" style=" font-size: 1.05rem;">Previous</button>
+                    <button  class="govuk-button" type="submit" style=" font-size: 1.05rem;">Continue</button>
+                </form>
+            </div>
+
+            <p class="cancel">
+                <a  href="">Cancel</a>
+            </p>
+        </div>
 
     </div>
 
@@ -643,6 +777,16 @@ Divorce
             document.getElementById(buttonname + itemnumber).innerHTML = 'Select';
             updateresults();
         }
+    }
+
+
+
+
+
+
+    function showaddressfields()
+    {
+        document.getElementById("hiddenaddress").style.display = "block";
     }
 
 
