mostly done but rough and no addresses for testing of search

--- a/app/views/searchorgs/layoutdemomyhmcts.html
+++ b/app/views/searchorgs/layoutdemomyhmcts.html
@@ -58,7 +58,7 @@
 
 
                 <div class="hmcts-header__logo">
-                    <a class="hmcts-header__link" href="/noticeofchange/solicitor/caselist" aria-current="page">Manage Cases</a>
+                    <a class="hmcts-header__link" href="/noticeofchange/search/caselist" aria-current="page">Manage Cases</a>
                 </div>
 
 
@@ -98,12 +98,12 @@
                 label: 'Primary navigation',
                 items: [{
                 text: 'Case list',
-                href: getUrl('/solicitor/caselist'),
+                href: getUrl('/search/caselist'),
                 active: pageId == '#'
                 },
                 {
                 text: 'Create case',
-                href: getUrl('/solicitor/caselist'),
+                href: getUrl('/search/caselist'),
                 active: pageId == '#'
                 },
                 {
