--- a/app/views/searchorgs/search/fr1.html
+++ b/app/views/searchorgs/search/fr1.html
@@ -62,8 +62,8 @@ Divorce
                     </form>
                 </div>
 
-                <p class="cancel">
-                    <a  href="">Cancel</a>
+                <p class="cancel" >
+                    <a  href="/searchorgs/search/caselist">Cancel</a>
                 </p>
             </div>
 
