draft of manage org working.  not complete

--- a/app/views/searchorgs/search/fr2.html
+++ b/app/views/searchorgs/search/fr2.html
@@ -162,7 +162,7 @@ Divorce
 
             <hr>
 
-            <h3 class="govuk-heading-m govuk-!-margin-top-7 govuk-!-margin-bottom-4">Applicant Organisation Policy</h3>
+             <!--  <h3 class="govuk-heading-m govuk-!-margin-top-7 govuk-!-margin-bottom-4">Applicant Organisation Policy</h3>  -->
 
 
             <h3 class="govuk-heading-m govuk-!-margin-top-7 govuk-!-margin-bottom-4">Search for an organisation</h3>
