--- a/app/views/searchorgs/search/fr5.html
+++ b/app/views/searchorgs/search/fr5.html
@@ -89,7 +89,7 @@ Divorce
                     <div style="border-left: 10px solid #bfc1c3; padding-left: 15px;  margin-bottom: 30px;">
 
 
-                        <h3 class="govuk-heading-m govuk-!-margin-top-7 govuk-!-margin-bottom-4">Respondent Organisation Policy</h3>
+                        <!-- <h3 class="govuk-heading-m govuk-!-margin-top-7 govuk-!-margin-bottom-4">Respondent Organisation Policy</h3>  -->
 
 
                         <h3 class="govuk-heading-m govuk-!-margin-top-7 govuk-!-margin-bottom-4">Search for an organisation</h3>
