more data added

--- a/app/views/manageorg/solicitor/users.html
+++ b/app/views/manageorg/solicitor/users.html
@@ -73,12 +73,133 @@ Divorce
                         <td class="govuk-table__cell" style="width:120px;">Active</td>
                     </tr>
 
-
                     <tr class="govuk-table__row">
                         <td scope="row" class="govuk-table__cell" style="width:320px;"><a href="/manageorg/solicitor/userdetails?name=Elin Muth&emailaddress=Elin.Muth@bondshawsolictors.uk&showcaapermish=false&">Elin Muth</a></td>
                         <td class="govuk-table__cell" style="width:580px;">Elin.Muth@bondshawsolictors.uk</td>
                         <td class="govuk-table__cell" style="width:120px;">Active</td>
                     </tr>
+
+
+
+                    <tr class="govuk-table__row">
+                        <td scope="row" class="govuk-table__cell" style="width:320px;"><a href="/manageorg/solicitor/userdetails?name=Ann Zukowski&emailaddress=Ann.Zukowski@bondshawsolictors.uk&showcaapermish=false&">Ann Zukowski</a></td>
+                        <td class="govuk-table__cell" style="width:580px;">Ann.Zukowski@bondshawsolictors.uk</td>
+                        <td class="govuk-table__cell" style="width:120px;">Active</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td scope="row" class="govuk-table__cell" style="width:320px;"><a href="/manageorg/solicitor/userdetails?name=Marica Pangle&emailaddress=Marica.Pangle@bondshawsolictors.uk&showcaapermish=false&">Marica Pangle</a></td>
+                        <td class="govuk-table__cell" style="width:580px;">Marica.Pangle@bondshawsolictors.uk</td>
+                        <td class="govuk-table__cell" style="width:120px;">Active</td>
+                    </tr>
+
+
+                    <tr class="govuk-table__row">
+                        <td scope="row" class="govuk-table__cell" style="width:320px;"><a href="/manageorg/solicitor/userdetails?name=Li Teems&emailaddress=Li.Teems@bondshawsolictors.uk&showcaapermish=false&">Li Teems</a></td>
+                        <td class="govuk-table__cell" style="width:580px;">Li.Teems@bondshawsolictors.uk</td>
+                        <td class="govuk-table__cell" style="width:120px;">Active</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td scope="row" class="govuk-table__cell" style="width:320px;"><a href="/manageorg/solicitor/userdetails?name=Bobette Martensen&emailaddress=Bobette.Martensen@bondshawsolictors.uk&showcaapermish=false&">Bobette Martensen</a></td>
+                        <td class="govuk-table__cell" style="width:580px;">Bobette.Martensen@bondshawsolictors.uk</td>
+                        <td class="govuk-table__cell" style="width:120px;">Active</td>
+                    </tr>
+
+
+                    <tr class="govuk-table__row">
+                        <td scope="row" class="govuk-table__cell" style="width:320px;"><a href="/manageorg/solicitor/userdetails?name=Hellen Ridout&emailaddress=Hellen.Ridout@bondshawsolictors.uk&showcaapermish=false&">Hellen Ridout</a></td>
+                        <td class="govuk-table__cell" style="width:580px;">Hellen.Ridout@bondshawsolictors.uk</td>
+                        <td class="govuk-table__cell" style="width:120px;">Active</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td scope="row" class="govuk-table__cell" style="width:320px;"><a href="/manageorg/solicitor/userdetails?name=Anne Mallard&emailaddress=Anne.Mallard@bondshawsolictors.uk&showcaapermish=false&">Anne Mallard</a></td>
+                        <td class="govuk-table__cell" style="width:580px;">Anne.Mallard@bondshawsolictors.uk</td>
+                        <td class="govuk-table__cell" style="width:120px;">Active</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td scope="row" class="govuk-table__cell" style="width:320px;"><a href="/manageorg/solicitor/userdetails?name=Eufemia Batdorf&emailaddress=Eufemia.Batdorf@bondshawsolictors.uk&showcaapermish=false&">Eufemia Batdorf</a></td>
+                        <td class="govuk-table__cell" style="width:580px;">Eufemia.Batdorf@bondshawsolictors.uk</td>
+                        <td class="govuk-table__cell" style="width:120px;">Active</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td scope="row" class="govuk-table__cell" style="width:320px;"><a href="/manageorg/solicitor/userdetails?name=Rupert Wiesen&emailaddress=Rupert.Wiesen@bondshawsolictors.uk&showcaapermish=false&">Rupert Wiesen</a></td>
+                        <td class="govuk-table__cell" style="width:580px;">Rupert.Wiesen@bondshawsolictors.uk</td>
+                        <td class="govuk-table__cell" style="width:120px;">Active</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td scope="row" class="govuk-table__cell" style="width:320px;"><a href="/manageorg/solicitor/userdetails?name=Soraya Anthony&emailaddress=Soraya.Anthony@bondshawsolictors.uk&showcaapermish=false&">Soraya Anthony</a></td>
+                        <td class="govuk-table__cell" style="width:580px;">Soraya.Anthony@bondshawsolictors.uk</td>
+                        <td class="govuk-table__cell" style="width:120px;">Active</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td scope="row" class="govuk-table__cell" style="width:320px;"><a href="/manageorg/solicitor/userdetails?name=Tessa Landers&emailaddress=Tessa.Landers@bondshawsolictors.uk&showcaapermish=false&">Tessa Landers</a></td>
+                        <td class="govuk-table__cell" style="width:580px;">Tessa.Landers@bondshawsolictors.uk</td>
+                        <td class="govuk-table__cell" style="width:120px;">Active</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td scope="row" class="govuk-table__cell" style="width:320px;"><a href="/manageorg/solicitor/userdetails?name=Genevieve Owings&emailaddress=Genevieve.Owings@bondshawsolictors.uk&showcaapermish=false&">Genevieve Owings</a></td>
+                        <td class="govuk-table__cell" style="width:580px;">Genevieve.Owings@bondshawsolictors.uk</td>
+                        <td class="govuk-table__cell" style="width:120px;">Active</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td scope="row" class="govuk-table__cell" style="width:320px;"><a href="/manageorg/solicitor/userdetails?name=Jerrold Speers&emailaddress=Jerrold.Speers@bondshawsolictors.uk&showcaapermish=false&">Jerrold Speers</a></td>
+                        <td class="govuk-table__cell" style="width:580px;">Jerrold.Speers@bondshawsolictors.uk</td>
+                        <td class="govuk-table__cell" style="width:120px;">Active</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td scope="row" class="govuk-table__cell" style="width:320px;"><a href="/manageorg/solicitor/userdetails?name=Bok Kita&emailaddress=Bok.Kita@bondshawsolictors.uk&showcaapermish=false&">Bok Kita</a></td>
+                        <td class="govuk-table__cell" style="width:580px;">Bok.Kita@bondshawsolictors.uk</td>
+                        <td class="govuk-table__cell" style="width:120px;">Active</td>
+                    </tr>
+
+
+                    <tr class="govuk-table__row">
+                        <td scope="row" class="govuk-table__cell" style="width:320px;"><a href="/manageorg/solicitor/userdetails?name=Chris Finch&emailaddress=Chris.Finch@bondshawsolictors.uk&showcaapermish=false&">Chris Finch</a></td>
+                        <td class="govuk-table__cell" style="width:580px;">Chris.Finch@bondshawsolictors.uk</td>
+                        <td class="govuk-table__cell" style="width:120px;">Active</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td scope="row" class="govuk-table__cell" style="width:320px;"><a href="/manageorg/solicitor/userdetails?name=Becky Schneller&emailaddress=Becky.Schneller@bondshawsolictors.uk&showcaapermish=false&">Becky Schneller</a></td>
+                        <td class="govuk-table__cell" style="width:580px;">Becky.Schneller@bondshawsolictors.uk</td>
+                        <td class="govuk-table__cell" style="width:120px;">Active</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td scope="row" class="govuk-table__cell" style="width:320px;"><a href="/manageorg/solicitor/userdetails?name=Lena Blanche&emailaddress=Lena.Blanche@bondshawsolictors.uk&showcaapermish=false&">Lena Blanche</a></td>
+                        <td class="govuk-table__cell" style="width:580px;">Lena.Blanche@bondshawsolictors.uk</td>
+                        <td class="govuk-table__cell" style="width:120px;">Active</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td scope="row" class="govuk-table__cell" style="width:320px;"><a href="/manageorg/solicitor/userdetails?name=Russel Groom&emailaddress=Russel.Groom@bondshawsolictors.uk&showcaapermish=false&">Russel Groom</a></td>
+                        <td class="govuk-table__cell" style="width:580px;">Russel.Groom@bondshawsolictors.uk</td>
+                        <td class="govuk-table__cell" style="width:120px;">Active</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td scope="row" class="govuk-table__cell" style="width:320px;"><a href="/manageorg/solicitor/userdetails?name=Dacia Hickel&emailaddress=Dacia.Hickel@bondshawsolictors.uk&showcaapermish=false&">Dacia Hickel</a></td>
+                        <td class="govuk-table__cell" style="width:580px;">Dacia.Hickel@bondshawsolictors.uk</td>
+                        <td class="govuk-table__cell" style="width:120px;">Active</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td scope="row" class="govuk-table__cell" style="width:320px;"><a href="/manageorg/solicitor/userdetails?name=XXXXXXXXXX&emailaddress=YYYYYYYYY&showcaapermish=false&">XXXXXXXXXXX</a></td>
+                        <td class="govuk-table__cell" style="width:580px;">YYYYYYYYYYYYY</td>
+                        <td class="govuk-table__cell" style="width:120px;">Active</td>
+                    </tr>
+
+
+
 
                 </tbody>
             </table>
